Layer weight gives incorrect result in GLSL Material mode #47670

Closed
opened 2016-03-02 22:18:07 +01:00 by Eelco Dolstra · 12 comments

System Information
NixOS Linux, kernel 3.18.26
GeForce GTX 970, driver 352.63

Blender Version
Broken: 2.77-rc1
Worked: 2.76b

Short description of error
Cycles layer weight node shows an incorrect result in Material mode in the viewport.

In 2.76, the attached file shows as follows:
good-2.76.png

While in 2.77-rc1 I get this:
bad-2.77.png

Exact steps for others to reproduce the error
See attached blend file in Material mode in the viewport.
bug.blend

A workaround is to connect the Normal input of the Layer weight node to the Normal output of a Geometry node. However, connecting to a image texture normal map gives wrong results.

Note: reverting commit 72dd1ba3fe ("Fix #47349: incorrect Cycles fresnel and layer weight with GLSL materials") fixes the problem for me. However, that does break the workaround described above (i.e. where the Normal output of the Geometry node is used).

**System Information** NixOS Linux, kernel 3.18.26 GeForce GTX 970, driver 352.63 **Blender Version** Broken: 2.77-rc1 Worked: 2.76b **Short description of error** Cycles layer weight node shows an incorrect result in Material mode in the viewport. In 2.76, the attached file shows as follows: ![good-2.76.png](https://archive.blender.org/developer/F286701/good-2.76.png) While in 2.77-rc1 I get this: ![bad-2.77.png](https://archive.blender.org/developer/F286703/bad-2.77.png) **Exact steps for others to reproduce the error** See attached blend file in Material mode in the viewport. [bug.blend](https://archive.blender.org/developer/F286705/bug.blend) A workaround is to connect the Normal input of the Layer weight node to the Normal output of a Geometry node. However, connecting to a image texture normal map gives wrong results. Note: reverting commit 72dd1ba3fe67206680ef3540b681d944e8bb4872 ("Fix #47349: incorrect Cycles fresnel and layer weight with GLSL materials") fixes the problem for me. However, that does break the workaround described above (i.e. where the Normal output of the Geometry node is used).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @edolstra

Added subscriber: @edolstra

#47716 was marked as duplicate of this issue

#47716 was marked as duplicate of this issue

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Brecht Van Lommel was assigned by Thomas Dinges 2016-03-03 22:34:16 +01:00

Brecht, can you please check? :)

Brecht, can you please check? :)

Added subscriber: @cheleb

Added subscriber: @cheleb

This issue was referenced by 002deb29cb

This issue was referenced by 002deb29cbc2fe1045189aef42bf61785c614cb8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks! However, it still gives an incorrect result when the layer weight has a Normal Map node as an input, e.g.:
bad2.png
In 2.76 the normal input had no effect in GLSL mode (i.e. the output looked like the first image above).

Thanks! However, it still gives an incorrect result when the layer weight has a Normal Map node as an input, e.g.: ![bad2.png](https://archive.blender.org/developer/F288649/bad2.png) In 2.76 the normal input had no effect in GLSL mode (i.e. the output looked like the first image above).

This issue was referenced by 6bfd88acd9

This issue was referenced by 6bfd88acd9498bb068bde7ab047a593254b96a88

Added subscribers: @kevindietrich, @snapai

Added subscribers: @kevindietrich, @snapai
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47670
No description provided.