Fix T47670: cycles GLSL incorrect normal map node.